[gd_scene load_steps=4 format=3 uid="uid://bj8vtrhikitn4"]

[ext_resource type="Script" path="res://addons/AutoGrid/gridmap_button.gd" id="2"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="2"]

[node name="AutoGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 1
text = "AutoGrid
By XLIVE99"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Please read HELP.pdf for usage
Thank you for downloading"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Autotile" type="HBoxContainer" parent="VBoxContainer/VBox"]
layout_mode = 2

[node name="Autotile" type="Label" parent="VBoxContainer/VBox/Autotile"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Autotile"

[node name="Autotile_Check" type="CheckBox" parent="VBoxContainer/VBox/Autotile"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
shortcut_in_tooltip = false
text = "On"

[node name="Auto_Mode" type="HBoxContainer" parent="VBoxContainer/VBox"]
layout_mode = 2

[node name="Auto_Mode" type="Label" parent="VBoxContainer/VBox/Auto_Mode"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "Autotile Mode"

[node name="Auto_Mode_Opt" type="OptionButton" parent="VBoxContainer/VBox/Auto_Mode"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
shortcut_in_tooltip = false
item_count = 2
selected = 0
popup/item_0/text = "Full 3x3"
popup/item_0/id = 0
popup/item_1/text = "Minimal 3x3"
popup/item_1/id = 1

[node name="Auto_Axis" type="HBoxContainer" parent="VBoxContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBox/Auto_Axis"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Only uses selected axises while checking surroundings. 
If you are using only 2 axises (For example X & Z for top 
down games) then leaving this as \"All\" or \"X & Z Axis\" 
will be fine. If you are planning to create different 
height tiles than using \"All\" might cause problem if 
that tile has a bottom or top neighbour."
mouse_filter = 1
text = "Autotile Axis"

[node name="Auto_Axis_Opt" type="OptionButton" parent="VBoxContainer/VBox/Auto_Axis"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "All"
popup/item_0/id = 0
popup/item_1/text = "Y & Z Axises"
popup/item_1/id = 1
popup/item_2/text = "X & Z Axises"
popup/item_2/id = 2
popup/item_3/text = "X & Y Axises"
popup/item_3/id = 3

[node name="Auto_Scan_Axis" type="HBoxContainer" parent="VBoxContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBox/Auto_Scan_Axis"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Uses selected axis as normal of the tile. Select which 
axis direction your tile is facing (or which direction is 
considered ground). For example, the ground will use 
\"Y axis\" while background wall will use \"Z axis\" in 
2.5D games."
mouse_filter = 1
text = "Tile Normal Axis"

[node name="Auto_Scan_Axis_Opt" type="OptionButton" parent="VBoxContainer/VBox/Auto_Scan_Axis"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 1
popup/item_0/text = "X Axis"
popup/item_0/id = 0
popup/item_1/text = "Y Axis"
popup/item_1/id = 1
popup/item_2/text = "Z Axis"
popup/item_2/id = 2

[node name="Control" type="Control" parent="VBoxContainer/VBox"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Edit_Mode" type="HBoxContainer" parent="VBoxContainer/VBox"]
layout_mode = 2

[node name="Edit_Mode" type="Label" parent="VBoxContainer/VBox/Edit_Mode"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "Edit Mode"

[node name="Edit_Mode_Checked" type="CheckBox" parent="VBoxContainer/VBox/Edit_Mode"]
layout_mode = 2
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "On"

[node name="Performance_Mode" type="HBoxContainer" parent="VBoxContainer/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Performance_Mode" type="Label" parent="VBoxContainer/VBox/Performance_Mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Performance Mode"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/VBox/Performance_Mode"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
shortcut_in_tooltip = false
text = "On"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Control" type="CenterContainer" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reload_Autotile" type="Button" parent="VBoxContainer/Buttons/Control"]
layout_mode = 2
text = "Reload Autotile Info"

[node name="Control2" type="CenterContainer" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="Create_Autotile" type="Button" parent="VBoxContainer/Buttons/Control2"]
layout_mode = 2
shortcut_in_tooltip = false
text = "Create Autotile Info"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Warning" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Warning"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/Warning"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Please DO NOT change automatically created node names! And do not change .agrid file paths!"
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Bug_Report" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3

[node name="Github_Rich" type="RichTextLabel" parent="VBoxContainer/Bug_Report"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/normal = SubResource("1")
bbcode_enabled = true
text = "For [color=62ED53]feature request[/color] or [color=EF2D3A]bug report[/color], you can open issue from [url=https://github.com/XLIVE99/AutoGrid]github repo[/url]"
fit_content = true
scroll_active = false

[node name="Github_Rich2" type="RichTextLabel" parent="VBoxContainer/Bug_Report"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/normal = SubResource("2")
bbcode_enabled = true
text = "Also you can see my other works from my [url=https://www.linkedin.com/in/burak-idilmek-856669175/]LinkedIn[/url] (Feel free to message me)"
fit_content = true
scroll_active = false

[node name="Version_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.568627, 0.568627, 0.568627, 1)
text = "Version 1.3"
horizontal_alignment = 2

[connection signal="toggled" from="VBoxContainer/VBox/Autotile/Autotile_Check" to="." method="_on_Autotile_Check_toggled"]
[connection signal="item_selected" from="VBoxContainer/VBox/Auto_Mode/Auto_Mode_Opt" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/VBox/Auto_Axis/Auto_Axis_Opt" to="." method="_on_Auto_Axis_Opt_item_selected"]
[connection signal="item_selected" from="VBoxContainer/VBox/Auto_Scan_Axis/Auto_Scan_Axis_Opt" to="." method="_on_Auto_Scan_Axis_Opt_item_selected"]
[connection signal="toggled" from="VBoxContainer/VBox/Edit_Mode/Edit_Mode_Checked" to="." method="_on_Edit_Mode_Checked_toggled"]
[connection signal="toggled" from="VBoxContainer/VBox/Performance_Mode/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/Buttons/Control/Reload_Autotile" to="." method="_on_Reload_Autotile_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Control2/Create_Autotile" to="." method="_on_Create_Autotile_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/Bug_Report/Github_Rich" to="." method="_on_Github_Rich_meta_clicked"]
[connection signal="meta_clicked" from="VBoxContainer/Bug_Report/Github_Rich2" to="." method="_on_Github_Rich_meta_clicked"]
